src/test/deca/context/invalid/Objet/MethodCall-UpCast-Assign.deca
// Description:
//      Casting down and trying to call method
//
// Results:
//     Line 25: (RULE 3.28) Incompatible type assignment
//
// History:
//      created on 17/1/2022

class A {
    protected int x;
    void foo() {
    }
}

class B extends A{
    boolean y;
    void fooB() {

    }
}

{
    B b = new B();
    B a = (A) (b);
}
